--- a/head-foot.html
+++ b/head-foot.html
@@ -246,5 +246,27 @@ document.getElementById("lightbox").style.display="none";
 }
 </script>
 
+ <!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{ "@type": "Question", "name": "Question 1?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 2?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 3?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 4?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 5?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 6?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 7?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 8?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 9?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 10?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 11?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 12?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } }
+]
+}
+</script>
+
 </body>
 </html>
