--- a/head-foot.html
+++ b/head-foot.html
@@ -268,5 +268,87 @@ document.getElementById("lightbox").style.display="none";
 }
 </script>
 
+ <script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/logo.webp",
+"url": "https://homerepairs4u.com/",
+"telephone": "07735 873694",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "Askern",
+"addressLocality": "Doncaster",
+"postalCode": "DN6",
+"addressCountry": "GB"
+},
+"priceRange": "£",
+"openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
+"sameAs": [
+"https://www.facebook.com/yourpage",
+"https://www.instagram.com/yourpage"
+],
+"areaServed": [
+{"@type": "Place", "name": "Doncaster"},
+{"@type": "Place", "name": "Bentley"},
+{"@type": "Place", "name": "Campsall"},
+{"@type": "Place", "name": "Fenwick"},
+{"@type": "Place", "name": "Adwick-le-Street"},
+{"@type": "Place", "name": "Bessacre"},
+{"@type": "Place", "name": "Norton"},
+{"@type": "Place", "name": "Carcroft"},
+{"@type": "Place", "name": "Askern"},
+{"@type": "Place", "name": "Skellow"},
+{"@type": "Place", "name": "Burghwallis"},
+{"@type": "Place", "name": "Woodlands"},
+{"@type": "Place", "name": "Hog Fields"},
+{"@type": "Place", "name": "Toll-bar"},
+{"@type": "Place", "name": "Sprotbrough"},
+{"@type": "Place", "name": "Scawsby"},
+{"@type": "Place", "name": "Scawthorpe"},
+{"@type": "Place", "name": "Edenthorpe"},
+{"@type": "Place", "name": "Kirk-sandall"}
+],
+"makesOffer": [
+{
+"@type": "Service",
+"name": "Internal Minor Home Repairs",
+"description": "Small repairs inside your home, fixing minor issues quickly and professionally."
+},
+{
+"@type": "Service",
+"name": "Guttering Service",
+"description": "Gutter cleaning, clearing, repairs and replacement for all types of gutters."
+},
+{
+"@type": "Service",
+"name": "Exterior Decorating",
+"description": "External house painting, metal garden rails and gate painting, fence painting."
+},
+{
+"@type": "Service",
+"name": "uPVC Restoration",
+"description": "uPVC cleaning and restoration services to make windows and doors look like new."
+},
+{
+"@type": "Service",
+"name": "Conservatory Valets",
+"description": "Comprehensive cleaning and maintenance for conservatories."
+},
+{
+"@type": "Service",
+"name": "Regular Window Cleaning",
+"description": "Scheduled cleaning services for homes and businesses."
+},
+{
+"@type": "Service",
+"name": "Pressure Washing",
+"description": "Driveways, paths, walls, decking, and roof pressure washing services."
+}
+]
+}
+</script>
+
 </body>
 </html>
