--- a/head-foot.html
+++ b/head-foot.html
@@ -350,5 +350,30 @@ document.getElementById("lightbox").style.display="none";
 }
 </script>
 
+martin steel <martinsteel940@gmail.com>
+11:29 (0 minutes ago)
+to me
+
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "BreadcrumbList",
+"itemListElement": [
+{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+},
+{
+"@type": "ListItem",
+"position": 2,
+"name": "Guttering Service",
+"item": "https://homerepairs4u.com/services/guttering.html"
+}
+]
+}
+</script>
+
 </body>
 </html>
