--- a/head-foot.html
+++ b/head-foot.html
@@ -350,10 +350,6 @@ document.getElementById("lightbox").style.display="none";
 }
 </script>
 
-martin steel <martinsteel940@gmail.com>
-11:29 (0 minutes ago)
-to me
-
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -370,6 +366,64 @@ to me
 "position": 2,
 "name": "Guttering Service",
 "item": "https://homerepairs4u.com/services/guttering.html"
+}
+]
+}
+</script>
+
+ <script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "WebPage",
+"name": "Home Repairs 4U - Doncaster",
+"url": "https://homerepairs4u.com/",
+"description": "Home Repairs 4U provides internal minor home repairs, guttering, exterior decorating, uPVC restoration, conservatory valets, window cleaning, and pressure washing services across Doncaster and surrounding areas.",
+"breadcrumb": {
+"@type": "BreadcrumbList",
+"itemListElement": [
+{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+}
+]
+},
+"mainEntity": [
+{
+"@type": "WebPageElement",
+"name": "Internal Minor Home Repairs",
+"cssSelector": "section:nth-of-type(1)"
+},
+{
+"@type": "WebPageElement",
+"name": "Guttering Service",
+"cssSelector": "section:nth-of-type(2)"
+},
+{
+"@type": "WebPageElement",
+"name": "Exterior Decorating",
+"cssSelector": "section:nth-of-type(3)"
+},
+{
+"@type": "WebPageElement",
+"name": "uPVC Restoration",
+"cssSelector": "section:nth-of-type(4)"
+},
+{
+"@type": "WebPageElement",
+"name": "Conservatory Valets",
+"cssSelector": "section:nth-of-type(5)"
+},
+{
+"@type": "WebPageElement",
+"name": "Regular Window Cleaning",
+"cssSelector": "section:nth-of-type(6)"
+},
+{
+"@type": "WebPageElement",
+"name": "Pressure Washing",
+"cssSelector": "section:nth-of-type(7)"
 }
 ]
 }
