--- a/index.html
+++ b/index.html
@@ -1,1 +1,433 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>ADD TITLE</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/">
+<meta name="description" content="ADD META">
+
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+document.getElementById("lightbox").style.display="flex";
+document.getElementById("lightboxImg").src=src;
+}
+function closeLightbox(){
+document.getElementById("lightbox").style.display="none";
+}
+</script>
+</style>
+
+
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 1</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 2</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 3</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 4</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 5</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- Section 6 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 6</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- Section 7 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 7</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- Section 8 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Title 8</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<img src="/images/placeholder1.webp"
+alt="Place your alt text here"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)">
+
+<!-- ✅ FAQ SECTION -->
+<section style="max-width:900px; margin:40px auto; padding:0 15px;">
+
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
+
+<div>
+<p><strong>Question 1?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 2?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 3?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 4?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 5?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 6?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 7?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 8?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 9?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 10?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 11?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 12?</strong><br>
+Answer goes here.</p>
+</div>
+
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</div>
+
+<div class="lightbox" id="lightbox">
+<span onclick="closeLightbox()">×</span>
+<img id="lightboxImg" src="" alt="">
+</div>
+
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+
+ <!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+document.getElementById("lightbox").style.display="flex";
+document.getElementById("lightboxImg").src=src;
+}
+function closeLightbox(){
+document.getElementById("lightbox").style.display="none";
+}
+</script>
+
+ <!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{ "@type": "Question", "name": "Question 1?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 2?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 3?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 4?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 5?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 6?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 7?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 8?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 9?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 10?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 11?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "Question 12?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } }
+]
+}
+</script>
+
+ <script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/logo.webp",
+"url": "https://homerepairs4u.com/",
+"telephone": "07735 873694",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "Askern",
+"addressLocality": "Doncaster",
+"postalCode": "DN6",
+"addressCountry": "GB"
+},
+"priceRange": "£",
+"openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
+"sameAs": [
+"https://www.facebook.com/yourpage",
+"https://www.instagram.com/yourpage"
+],
+"areaServed": [
+{"@type": "Place", "name": "Doncaster"},
+{"@type": "Place", "name": "Bentley"},
+{"@type": "Place", "name": "Campsall"},
+{"@type": "Place", "name": "Fenwick"},
+{"@type": "Place", "name": "Adwick-le-Street"},
+{"@type": "Place", "name": "Bessacre"},
+{"@type": "Place", "name": "Norton"},
+{"@type": "Place", "name": "Carcroft"},
+{"@type": "Place", "name": "Askern"},
+{"@type": "Place", "name": "Skellow"},
+{"@type": "Place", "name": "Burghwallis"},
+{"@type": "Place", "name": "Woodlands"},
+{"@type": "Place", "name": "Hog Fields"},
+{"@type": "Place", "name": "Toll-bar"},
+{"@type": "Place", "name": "Sprotbrough"},
+{"@type": "Place", "name": "Scawsby"},
+{"@type": "Place", "name": "Scawthorpe"},
+{"@type": "Place", "name": "Edenthorpe"},
+{"@type": "Place", "name": "Kirk-sandall"}
+],
+"makesOffer": [
+{
+"@type": "Service",
+"name": "Internal Minor Home Repairs",
+"description": "Small repairs inside your home, fixing minor issues quickly and professionally."
+},
+{
+"@type": "Service",
+"name": "Guttering Service",
+"description": "Gutter cleaning, clearing, repairs and replacement for all types of gutters."
+},
+{
+"@type": "Service",
+"name": "Exterior Decorating",
+"description": "External house painting, metal garden rails and gate painting, fence painting."
+},
+{
+"@type": "Service",
+"name": "uPVC Restoration",
+"description": "uPVC cleaning and restoration services to make windows and doors look like new."
+},
+{
+"@type": "Service",
+"name": "Conservatory Valets",
+"description": "Comprehensive cleaning and maintenance for conservatories."
+},
+{
+"@type": "Service",
+"name": "Regular Window Cleaning",
+"description": "Scheduled cleaning services for homes and businesses."
+},
+{
+"@type": "Service",
+"name": "Pressure Washing",
+"description": "Driveways, paths, walls, decking, and roof pressure washing services."
+}
+]
+}
+</script>
+
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "BreadcrumbList",
+"itemListElement": [
+{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+},
+{
+"@type": "ListItem",
+"position": 2,
+"name": "Guttering Service",
+"item": "https://homerepairs4u.com/services/guttering.html"
+}
+]
+}
+</script>
+
+ <script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "WebPage",
+"name": "Home Repairs 4U - Doncaster",
+"url": "https://homerepairs4u.com/",
+"description": "Home Repairs 4U provides internal minor home repairs, guttering, exterior decorating, uPVC restoration, conservatory valets, window cleaning, and pressure washing services across Doncaster and surrounding areas.",
+"breadcrumb": {
+"@type": "BreadcrumbList",
+"itemListElement": [
+{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+}
+]
+},
+"mainEntity": [
+{
+"@type": "WebPageElement",
+"name": "Internal Minor Home Repairs",
+"cssSelector": "section:nth-of-type(1)"
+},
+{
+"@type": "WebPageElement",
+"name": "Guttering Service",
+"cssSelector": "section:nth-of-type(2)"
+},
+{
+"@type": "WebPageElement",
+"name": "Exterior Decorating",
+"cssSelector": "section:nth-of-type(3)"
+},
+{
+"@type": "WebPageElement",
+"name": "uPVC Restoration",
+"cssSelector": "section:nth-of-type(4)"
+},
+{
+"@type": "WebPageElement",
+"name": "Conservatory Valets",
+"cssSelector": "section:nth-of-type(5)"
+},
+{
+"@type": "WebPageElement",
+"name": "Regular Window Cleaning",
+"cssSelector": "section:nth-of-type(6)"
+},
+{
+"@type": "WebPageElement",
+"name": "Pressure Washing",
+"cssSelector": "section:nth-of-type(7)"
+}
+]
+}
+</script>
+
+</body>
+</html>
