--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>ADD TITLE</title>
+<title>Home Repairs Doncaster - Guttering, Painting, uPVC & Pressure Washing - Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/">
-<meta name="description" content="ADD META">
+<meta name="description" content="Home Repairs 4U provides internal home repairs, gutter cleaning and repairs, exterior painting, uPVC Restoration, window cleaning, and pressure washing across Doncaster, Askern, Bentley, Campsall, Adwick-Le-Street and surrounding areas. Call today for reliable local service.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
