--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ onclick="openLightbox(this.src, this.alt)">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Title 3</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2>Exterior Decorating</h2>
+<p>External decorating improves both the look and protection of your property. External house painting refreshes tired walls, boosts kerb appeal and adds a protective layer against weather damage. Painting garden rails and gates not only makes them look smarter but also helps prevent rust and wear. Fence painting keeps timber strong, protected from rot, and looking clean and well cared for. Regular exterior decorating helps your property stay attractive, increases its lifespan, and reduces the need for costly repairs caused by weather, damp and general wear and tear..</p>
 <img src="/images/placeholder1.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
