--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ onclick="openLightbox(this.src, this.alt)">
 
 <!-- Section 4 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Title 4</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2>uPVC Restoration</h2>
+<p>uPVC restoration is all about bringing tired, dirty frames and doors back to life. Over time, uPVC can become stained, dull and discoloured from weather, pollution and everyday wear. Professional cleaning restores the original look, making windows and doors bright, fresh and well cared for. This also includes cleaning fascias and guttering to the highest possible standard, improving the overall appearance of your home. Regular uPVC restoration not only makes your property look better but also helps extend the life of your fittings by keeping them clean, protected and properly maintained.</p>
 <img src="/images/placeholder1.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
