--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ onclick="openLightbox(this.src, this.alt)">
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Regular Window Cleaning</h2>
-<p>Regular window cleaning keeps your home or business looking smart, bright and well maintained. Clean windows let in more natural light and improve the overall appearance of your property. A reliable regular service means your windows are kept consistently clear without you having to worry about it. Frames, sills and glass are cleaned thoroughly, removing dirt, dust and marks left by weather and traffic. Whether you need monthly, fortnightly or scheduled visits, regular window cleaning helps protect your windows, keeps them looking their best and saves you time and effort.</p>
+<h2>Conservatory Valets</h2>
+<p>Conservatory valets provide a thorough and detailed clean for your uPVC conservatory, both inside and out. This service includes washing the glass panels, frames, roof, and sills, removing dirt, algae, and water marks that build up over time. Every corner is carefully attended to, ensuring a spotless finish and restoring the conservatory’s original brightness. Regular conservatory valets help maintain the structure, protect the uPVC, and keep your space looking fresh, inviting, and well cared for all year round.</p>
 <img src="/images/placeholder1.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -145,8 +145,8 @@ onclick="openLightbox(this.src, this.alt)">
 
 <!-- Section 6 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Title 6</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2>Regular Window Cleaning</h2>
+<p>Regular window cleaning keeps your home or business looking smart, bright and well maintained. Clean windows let in more natural light and improve the overall appearance of your property. A reliable regular service means your windows are kept consistently clear without you having to worry about it. Frames, sills and glass are cleaned thoroughly, removing dirt, dust and marks left by weather and traffic. Whether you need monthly, fortnightly or scheduled visits, regular window cleaning helps protect your windows, keeps them looking their best and saves you time and effort.</p>
 <img src="/images/placeholder1.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -154,8 +154,8 @@ onclick="openLightbox(this.src, this.alt)">
 
 <!-- Section 7 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Title 7</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2>Pressure Washing</h2>
+<p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
 <img src="/images/placeholder1.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -163,8 +163,8 @@ onclick="openLightbox(this.src, this.alt)">
 
 <!-- Section 8 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Title 8</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2>Other Services</h2>
+<p>Other services from Home Repairs 4U cover a wide range of additional outdoor maintenance and repair work, complementing our core offerings. These include minor outdoor repairs, such as fixing gates, fences, sheds, and decking, as well as addressing any wear and tear that can affect the safety and appearance of your property. We also extend our services to cover seasonal and one-off tasks, including external woodwork treatment, roof maintenance, and cleaning of driveways, paths, and patios. Whether it’s repairing a broken fence panel, restoring faded garden structures, or preparing surfaces for painting, these services ensure every part of your property is cared for. By combining our expertise in guttering, exterior decorating, uPVC restoration, conservatory valets, window cleaning, and pressure washing, we provide a complete solution to maintain your home inside and out. Each task is completed with attention to detail and professionalism, keeping your property safe, functional, and visually appealing. With our extended services, you can rely on Home Repairs 4U to handle all the extra jobs that make a real difference to your home’s upkeep and longevity</p>
 <img src="/images/placeholder1.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
