--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ onclick="openLightbox(this.src, this.alt)">
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Guttering Services</h2>
 <p>Guttering services are essential for protecting your home from water damage. Over time, gutters can fill with leaves, moss and debris, stopping rainwater from flowing away properly. Cleaning and clearing your gutters helps prevent blockages, leaks and overflowing that can damage walls, roofs and foundations. If your gutters are leaking, sagging or broken, repairs can restore them before bigger problems develop. In cases where gutters are badly damaged or outdated, full replacement gives your home a fresh, reliable system that works efficiently. Regular gutter maintenance keeps rainwater under control, protects your property, and saves money by avoiding costly structural repairs later on.</p>
-<img src="/images/placeholder1.webp"
+<img src="/images/cleaned-gutters-before-after.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)">
