--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ onclick="openLightbox(this.src, this.alt)">
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Conservatory Valets</h2>
 <p>Conservatory valets provide a thorough and detailed clean for your uPVC conservatory, both inside and out. This service includes washing the glass panels, frames, roof, and sills, removing dirt, algae, and water marks that build up over time. Every corner is carefully attended to, ensuring a spotless finish and restoring the conservatory’s original brightness. Regular conservatory valets help maintain the structure, protect the uPVC, and keep your space looking fresh, inviting, and well cared for all year round.</p>
-<img src="/images/placeholder1.webp"
+<img src="/images/conservatory-before-after.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)">
