--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ onclick="openLightbox(this.src, this.alt)">
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Regular Window Cleaning</h2>
 <p>Regular window cleaning keeps your home or business looking smart, bright and well maintained. Clean windows let in more natural light and improve the overall appearance of your property. A reliable regular service means your windows are kept consistently clear without you having to worry about it. Frames, sills and glass are cleaned thoroughly, removing dirt, dust and marks left by weather and traffic. Whether you need monthly, fortnightly or scheduled visits, regular window cleaning helps protect your windows, keeps them looking their best and saves you time and effort.</p>
-<img src="/images/window-cleaning.webp"
+<img src="/images/window-cleaning-service.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)">
