--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Internal Minor Home Repairs</h2>
 <p>Internal minor home repairs cover all the small jobs that make a big difference to your home. From fixing doors that won’t close properly and repairing damaged walls, to replacing broken fittings and sorting loose fixtures, every job is handled with care and attention to detail. These are the types of repairs that often get put off, but leaving them can lead to bigger problems later. Getting them sorted quickly keeps your home safe, tidy and comfortable. Whether it’s wear and tear, accidental damage or general maintenance, internal minor repairs help keep everything working as it should, without the cost or disruption of major building work.</p>
-<img src="/images/placeholder1.webp"
+<img src="/images/internal-repairs.webp"
 alt="Place your alt text here"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)">
