--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@ onclick="openLightbox(this.src, this.alt)">
 <h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
 
 <div>
-<p><strong>Question 1?</strong><br>
-Answer goes here.</p>
+<p><strong>What types of internal minor home repairs do you handle?</strong><br>
+We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear annd tear.</p>
 
-<p><strong>Question 2?</strong><br>
-Answer goes here.</p>
+<p><strong>Do you offer gutter cleaning and maintenance?</strong><br>
+Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage.</p>
 
 <p><strong>Question 3?</strong><br>
 Answer goes here.</p>
@@ -248,8 +248,8 @@ document.getElementById("lightbox").style.display="none";
 "@context": "https://schema.org",
 "@type": "FAQPage",
 "mainEntity": [
-{ "@type": "Question", "name": "Question 1?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 2?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
+{ "@type": "Question", "name": "What types of internal minor home repairs do you handle?", "acceptedAnswer": { "@type": "Answer", "text": "We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear annd tear." } },
+{ "@type": "Question", "name": "Do you offer gutter cleaning and maintenance?", "acceptedAnswer": { "@type": "Answer", "text": "Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage." } },
 { "@type": "Question", "name": "Question 3?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
 { "@type": "Question", "name": "Question 4?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
 { "@type": "Question", "name": "Question 5?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
