--- a/index.html
+++ b/index.html
@@ -178,35 +178,35 @@ We handle small repairs inside your home, including fixing doors, replacing brok
 <p><strong>Do you offer gutter cleaning and maintenance?</strong><br>
 Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage.</p>
 
-<p><strong>Question 3?</strong><br>
-Answer goes here.</p>
+<p><strong>Can you repair damaged gutters?</strong><br>
+Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency.</p>
 
-<p><strong>Question 4?</strong><br>
-Answer goes here.</p>
+<p><strong>What does exterior decorating include?</strong><br>
+Exterior decorating covers external house painting, metal garden rails and gate painting, also fence painting to refresh your property's look and protect surfaces.</p>
 
-<p><strong>Question 5?</strong><br>
-Answer goes here.</p>
+<p><strong>Do you offer uPVC restoration?</strong><br>
+Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity. </p>
 
-<p><strong>Question 6?</strong><br>
-Answer goes here.</p>
+<p><strong>Can you clean my conservatory?</strong><br>
+We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard.</p>
 
-<p><strong>Question 7?</strong><br>
-Answer goes here.</p>
+<p><strong>How often should i have my windows cleaned?</strong><br>
+Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained.</p>
 
-<p><strong>Question 8?</strong><br>
-Answer goes here.</p>
+<p><strong>What surfaces can you pressure wash?</strong><br>
+We pressure wash driveways, paths, walls, decking and roofs, removing moss, algae, dirt and grime safely and effectively.</p>
 
-<p><strong>Question 9?</strong><br>
-Answer goes here.</p>
+<p><strong>Are your services suitable for all property types?</strong><br>
+Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific proprty needs.</p>
 
-<p><strong>Question 10?</strong><br>
-Answer goes here.</p>
+<p><strong>Do you offer same-day or urgent repairs?</strong><br>
+We aim to respond quickly and can often schedule repairs urgently to prevent further damage.</p>
 
-<p><strong>Question 11?</strong><br>
-Answer goes here.</p>
+<p><strong>Is your work insured?</strong><br>
+Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work.</p>
 
-<p><strong>Question 12?</strong><br>
-Answer goes here.</p>
+<p><strong>How do i schedule a service?</strong><br>
+Simply call us on 07735 873694 at a time convenient to you.</p>
 </div>
 
 </section>
@@ -250,16 +250,16 @@ document.getElementById("lightbox").style.display="none";
 "mainEntity": [
 { "@type": "Question", "name": "What types of internal minor home repairs do you handle?", "acceptedAnswer": { "@type": "Answer", "text": "We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear annd tear." } },
 { "@type": "Question", "name": "Do you offer gutter cleaning and maintenance?", "acceptedAnswer": { "@type": "Answer", "text": "Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage." } },
-{ "@type": "Question", "name": "Question 3?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 4?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 5?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 6?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 7?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 8?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 9?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 10?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 11?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } },
-{ "@type": "Question", "name": "Question 12?", "acceptedAnswer": { "@type": "Answer", "text": "Answer goes here." } }
+{ "@type": "Question", "name": "Can you repair damaged gutters?", "acceptedAnswer": { "@type": "Answer", "text": "Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency." } },
+{ "@type": "Question", "name": "What does exterior decorating include?", "acceptedAnswer": { "@type": "Answer", "text": "Exterior decorating covers external house painting, metal garden rails and gate painting, also fence painting to refresh your property's look and protect surfaces." } },
+{ "@type": "Question", "name": "Do you offer uPVC restoration?", "acceptedAnswer": { "@type": "Answer", "text": "Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity." } },
+{ "@type": "Question", "name": "Can you clean my conservatory?", "acceptedAnswer": { "@type": "Answer", "text": "We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard." } },
+{ "@type": "Question", "name": "How often should i have my windows cleaned?", "acceptedAnswer": { "@type": "Answer", "text": "Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained." } },
+{ "@type": "Question", "name": "What surfaces can you pressure wash?", "acceptedAnswer": { "@type": "Answer", "text": "We pressure wash driveways, paths, walls, decking and roofs, removing moss, algae, dirt and grime safely and effectively." } },
+{ "@type": "Question", "name": "Are your services suitable for all property types?", "acceptedAnswer": { "@type": "Answer", "text": "Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific proprty needs." } },
+{ "@type": "Question", "name": "Do you offer same-day or urgent repairs?", "acceptedAnswer": { "@type": "Answer", "text": "We aim to respond quickly and can often schedule repairs urgently to prevent further damage." } },
+{ "@type": "Question", "name": "Is your work insured?", "acceptedAnswer": { "@type": "Answer", "text": "Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work." } },
+{ "@type": "Question", "name": "How do i schedule a service?", "acceptedAnswer": { "@type": "Answer", "text": "Simply call us on 07735 873694 at a time convenient to you." } }
 ]
 }
 </script>
